# cutesync

./: .gitignore  CMakeLists.txt  CuteSync.pro  CuteSync.supp  FindGDK-PixBuf.cmake  Makefile  README.md  clean.sh  data.qrc  debug.sh  icons.qrc  qrc_data.cpp  qrc_icons.cpp  release.sh  rund.sh  runr.sh  valgrind.sh  valgrind.txt
src/: CuteSync.cpp  CuteSyncConfig.h  CuteSyncDefines.h  CuteSyncMainWindow.cpp  CuteSyncMainWindow.h
src/collections/: CuteSyncAbstractCollection.cpp  CuteSyncAbstractCollection.h  CuteSyncAbstractCollectionConfigWidget.cpp  CuteSyncAbstractCollectionConfigWidget.h  CuteSyncCollectionTypeResolver.cpp  CuteSyncDirCollection.cpp  CuteSyncDirCollection.h  CuteSyncDirTrack.cpp  CuteSyncDirTrack.h  CuteSyncGeneralCollectionConfigWidget.cpp  CuteSyncIPodCollection.cpp  CuteSyncIPodCollection.h  CuteSyncIPodCollectionConfigWidget.h  CuteSyncIPodTrack.cpp  CuteSyncIPodTrack.h  CuteSyncTrack.cpp  CuteSyncTrack.h
src/cutesync/: CSApplication.cpp  CSApplication.h  CuteSync.cpp  CuteSyncMainWindow.cpp  CuteSyncMainWindow.h  application.cpp  application.h  cutesync.cpp  mainmenubar.cpp  mainmenubar.h  mainwindow.cpp  mainwindow.h
src/cutesync/dialogs/: CuteSyncAboutDialog.h  CuteSyncNewCollectionDialog.cpp  CuteSyncNewCollectionDialog.h  CuteSyncSyncDialog.cpp  CuteSyncSyncDialog.h  aboutdialog.cpp  aboutdialog.h  createipoddialog.cpp  createipoddialog.h  newcollectiondialog.cpp  newcollectiondialog.h  syncdialog.cpp  syncdialog.h
src/cutesync/dialogs/inspector/: CuteSyncInspectorCollectionConfigDialog.cpp  CuteSyncInspectorCollectionConfigDialog.h  CuteSyncInspectorConfigDialog.cpp  CuteSyncInspectorConfigDialog.h  inspectoraboutdialog.cpp  inspectoraboutdialog.h  inspectorcollectionconfigdialog.cpp  inspectorcollectionconfigdialog.h  inspectorconfigdialog.cpp  inspectorconfigdialog.h
src/cutesync/settings/: CuteSyncSettingsManager.cpp  CuteSyncSettingsManager.h  settingsmanager.cpp  settingsmanager.h
src/cutesync/widgets/: CuteSyncCollectionDelegate.cpp  CuteSyncCollectionDelegate.h  CuteSyncCollectionInspector.cpp  CuteSyncCollectionInspector.h  CuteSyncCollectionListWidget.cpp  CuteSyncCollectionListWidget.h  CuteSyncDDSelectorModel.cpp  CuteSyncDDSelectorModel.h  CuteSyncDDSelectorWidget.cpp  CuteSyncDDSelectorWidget.h  CuteSyncIconListWidget.cpp  collectiondelegate.cpp  collectiondelegate.h  collectioninspector.cpp  collectioninspector.h  collectionlistwidget.cpp  collectionlistwidget.h  ddselectormodel.cpp  ddselectormodel.h  ddselectorwidget.cpp  ddselectorwidget.h  iconlistwidget.cpp  iconlistwidget.h
src/dialogs/: CuteSyncAboutDialog.cpp  CuteSyncNewCollectionDialog.cpp  CuteSyncSyncDialog.cpp  CuteSyncSyncDialog.h
src/dialogs/inspector/: CuteSyncInspectorAboutDialog.cpp  CuteSyncInspectorAboutDialog.h  CuteSyncInspectorCollectionConfigDialog.cpp  CuteSyncInspectorCollectionConfigDialog.h  CuteSyncInspectorConfigDialog.cpp  CuteSyncInspectorConfigDialog.h
src/id3ck/: id3ck.cpp
src/ifsck/: ifsck.cpp
src/libcute/: Defines.h
src/libcute/collections/: AbstractCollection.cpp  AbstractCollection.h  AbstractCollectionConfigWidget.cpp  AbstractCollectionConfigWidget.h  CollectionTypeResolver.cpp  CollectionTypeResolver.h  CuteSyncAbstractCollection.cpp  CuteSyncCollectionTypeResolver.cpp  CuteSyncCollectionTypeResolver.h  CuteSyncDirCollection.cpp  CuteSyncDirCollection.h  CuteSyncDirCollectionConfigWidget.cpp  CuteSyncDirCollectionConfigWidget.h  CuteSyncDirTrack.cpp  CuteSyncDirTrack.h  CuteSyncGeneralCollectionConfigWidget.h  CuteSyncIPodCollection.cpp  CuteSyncIPodCollection.h  CuteSyncIPodCollectionConfigWidget.cpp  CuteSyncIPodTrack.cpp  CuteSyncIPodTrack.h  CuteSyncTrack.h  DirCollection.cpp  DirCollection.h  DirCollectionConfigWidget.cpp  DirCollectionConfigWidget.h  DirTrack.cpp  DirTrack.h  GeneralCollectionConfigWidget.cpp  GeneralCollectionConfigWidget.h  IPodCollection.cpp  IPodCollection.h  IPodCollectionConfigWidget.cpp  IPodCollectionConfigWidget.h  IPodTrack.cpp  IPodTrack.h  Track.cpp  Track.h  abstractcollection.cpp  abstractcollection.h  (+20 more)
src/libcute/tags/: CuteSyncFileTypeResolver.cpp  FileTypeResolver.cpp  FileTypeResolver.h  TaggedFile.cpp  TaggedFile.h  filetyperesolver.cpp  filetyperesolver.h  taggedfile.cpp  taggedfile.h
src/libcute/thread/: CollectionLocker.cpp  CollectionLocker.h  CuteSyncCollectionLocker.cpp  collectionjobexecutor.cpp  collectionjobexecutor.h  collectionthreadpool.cpp  collectionthreadpool.h  pausablethread.cpp  pausablethread.h
src/libcute/util/: Bitwise.cpp  Bitwise.h  CuteSyncSystemUtils.cpp  MMIOHandle.cpp  MMIOHandle.h  SystemUtils.cpp  SystemUtils.h  bitwise.cpp  bitwise.h  guiutils.cpp  guiutils.h  mmiohandle.cpp  mmiohandle.h  systemutils.cpp  systemutils.h
src/libcute/widgets/: CollectionModel.cpp  CollectionModel.h  CuteSyncCollectionModel.cpp  CuteSyncCollectionModel.h  collectionlistitem.cpp  collectionlistitem.h  collectionmodel.cpp  collectionmodel.h
src/mkipod/: mkipod.cpp
src/settings/: CuteSyncSettingsManager.cpp  CuteSyncSettingsManager.h
src/tags/: CuteSyncFileTypeResolver.cpp  CuteSyncFileTypeResolver.h  CuteSyncTaggedFile.cpp  CuteSyncTaggedFile.h
src/thread/: CuteSyncCollectionLocker.cpp  CuteSyncCollectionLocker.h
src/util/: CuteSyncMMIOHandle.cpp  CuteSyncMMIOHandle.h  CuteSyncSystemUtils.h
src/widgets/: CuteSyncCollectionDelegate.cpp  CuteSyncCollectionInspector.cpp  CuteSyncCollectionInspector.h  CuteSyncCollectionListWidget.cpp  CuteSyncCollectionListWidget.h  CuteSyncCollectionModel.cpp  CuteSyncCollectionModel.h  CuteSyncDDSelectorModel.cpp  CuteSyncDDSelectorModel.h  CuteSyncDDSelectorWidget.cpp  CuteSyncDDSelectorWidget.h  CuteSyncIconListWidget.h
